and another test

--- a/asgn3/Makefile
+++ b/asgn3/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -Werror -Wextra -Wpedantic
 
 all: sorting
 
-sorting: sorting.o bubble.o shell.o quick.o set.o helper.o
+sorting: sorting.o bubble.o shell.o quick.o set.o helper.o stack.o queue.o
 	$(CC) $(CFLAGS) -o sorting sorting.o bubble.o shell.o quick.o stack.o queue.o set.o helper.o
 
 sorting.o: sorting.c
@@ -23,6 +23,12 @@ set.o: set.c
 
 helper.o: helper.c
 	$(CC) $(CFLAGS) -c helper.c
+
+stack.o: stack.c
+	$(CC) $(CFLAGS) -c stack.c
+
+queue.o: queue.c
+	$(CC) $(CFLAGS) -c queue.c
 
 clean:
 	rm -f *.o sorting
