adding empty files

--- a/asgn6/Makefile
+++ b/asgn6/Makefile
@@ -4,10 +4,10 @@ LFLAGS = -lm
 
 all: encode decode entropy
 
-encode: encode.o huffman.o pq.o node.o
+encode: encode.o huffman.o pq.o node.o io.o
 	$(CC) -o encode $^
 
-decode: decode.o huffman.o stack.o node.o
+decode: decode.o huffman.o stack.o node.o io.o
 	$(CC) -o decode $^
 
 entropy: entropy.o
