coded huffman.c and working on decode/encode

--- a/asgn6/Makefile
+++ b/asgn6/Makefile
@@ -7,7 +7,7 @@ all: encode decode entropy
 encode: encode.o huffman.o stack.o pq.o node.o code.o io.o
 	$(CC) -o encode $^
 
-decode: decode.o huffman.o stack.o node.o code.o io.o
+decode: decode.o huffman.o stack.o pq.o node.o code.o io.o
 	$(CC) -o decode $^
 
 entropy: entropy.o
