encode works incorrectly but ig its better than it not working at all; working on decode

--- a/asgn6/Makefile
+++ b/asgn6/Makefile
@@ -17,7 +17,7 @@ entropy: entropy.o
 	$(CC) $(CFLAGS) -c $<
 
 clean:
-	rm -f encode decode error entropy *.o
+	rm -f encode decode entropy *.o
 
 format:
 	clang-format -i -style=file *.h *.c
