--- a/asgn7/Makefile
+++ b/asgn7/Makefile
@@ -1,8 +1,8 @@
 CC = clang
-CFLAGS = -Wall -Wextra -Werror -Wpedantic
+CFLAGS = -Wall -Wextra -Werror -Wpedantic -g
 LFLAGS = -lm
 
-all: banhammer
+all: banhammer adt_testing
 
 banhammer: banhammer.o node.o ll.o ht.o bf.o bv.o speck.o parser.o
 	$(CC) -o banhammer $^
